[package]
name = "thocoin"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
ripemd = "0.1"
bs58 = "0.5"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
sled = "0.34"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
eframe = "0.27"
egui = "0.27"
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
jsonrpc-core = "18"
jsonrpc-http-server = "18"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
bip39 = { version = "2", features = ["rand"] }
ocl = "0.19"
totp-rs = "5"
base32 = "0.5"
fips204 = "0.4"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rpassword = "7"
subtle = "2"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "thocoind"
path = "src/main.rs"

[[bin]]
name = "thocoin-gui"
path = "src/gui_main.rs"

[[bin]]
name = "thocoin-pool"
path = "src/pool_server.rs"

[[bin]]
name = "thocoin-pool-miner"
path = "src/pool_miner.rs"
